--- a/site-template/index.html
+++ b/site-template/index.html
@@ -25,13 +25,6 @@
     <link rel="stylesheet" href="css/slick.css" />
 
     <link href="css/tooplate-little-fashion.css" rel="stylesheet" />
-    <!--
-
-Tooplate 2127 Little Fashion
-
-https://www.tooplate.com/view/2127-little-fashion
-
--->
   </head>
 
   <body>
@@ -69,27 +62,21 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="index.html">Home</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Previous Homes</a>
+                <a class="nav-link" href="products.html">Previous Homes</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
-
-            <div class="d-none d-lg-block">
-              <a href="#" class="bi-person custom-icon me-3"></a>
-
-              <a href="#" class="bi-bag custom-icon"></a>
-            </div>
           </div>
         </div>
       </nav>
@@ -102,14 +89,13 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 col-10">
-                  <h1 class="slick-title">GPS Grading</h1>
+                  <h1 class="slick-title">Land Development</h1>
 
-                  <p class="lead text-white mt-lg-3 mb-lg-5"
-                    >We use gps with machine control on our equipment, we offer in house 3D modeling
-                    for all of our projects.</p
+                  <p class="lead text-white mt-lg-3 mb-lg-5">
+                    Our dedicated team combines decades of experience with state-of-the-art
+                    equipment to ensure unparalleled accuracy and efficiency in every project.</p
                   >
-
-                  <a href="#" class="btn custom-btn">Learn more about us</a>
+                  <a href="about.html" class="btn custom-btn">Learn more about us</a>
                 </div>
               </div>
             </div>
@@ -126,11 +112,11 @@ https://www.tooplate.com/view/2127-little-fashion
                   <h1 class="slick-title">Custom Homes</h1>
 
                   <p class="lead text-white mt-lg-3 mb-lg-5"
-                    >We love getting creative while building your custom home or get away
-                    paradise!</p
-                  >
+                    >Discover the art of personalized living with BGR Construction, where
+                    extraordinary homes come to life.
+                  </p>
 
-                  <a href="#" class="btn custom-btn">Explore products</a>
+                  <a href="products.html" class="btn custom-btn">Explore homes</a>
                 </div>
               </div>
             </div>
@@ -144,13 +130,14 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 col-10">
-                  <h1 class="slick-title">Let's Chat</h1>
+                  <h1 class="slick-title">General Contractor</h1>
 
-                  <p class="lead text-white mt-lg-3 mb-lg-5"
-                    >We look forward to helping you build your next project!</p
+                  <p class="lead text-white mt-lg-3 mb-lg-5">
+                    Our comprehensive services include project planning, budgeting, subcontractor
+                    management, and rigorous adherence to building codes and regulations.</p
                   >
 
-                  <a href="#" class="btn custom-btn">Work with us</a>
+                  <a href="contact.html" class="btn custom-btn">Let's Chat</a>
                 </div>
               </div>
             </div>
@@ -234,17 +221,11 @@ https://www.tooplate.com/view/2127-little-fashion
                           >Built with <span>love</span> <br />& <span>precision</span> every
                           time.</h4
                         >
-
-                        <p
-                          >We Started off building home for clients back in 2008 ad loved it so much
-                          we wanted to build the whole thing and dig it.</p
+                        <p>
+                          With expertise in subdivision development, excavation, and underground
+                          utilities, we pride ourselves on delivering integrated solutions that
+                          shape the foundation of sustainable and well-planned neighborhoods.</p
                         >
-
-                        <p
-                          >Our crew has worked in construction all their lives and can't wait to do
-                          more labor.</p
-                        >
-
                         <div class="mt-2 mt-lg-auto">
                           <a href="#" class="custom-link mb-2">
                             Learn more about us
@@ -271,12 +252,11 @@ https://www.tooplate.com/view/2127-little-fashion
                       <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
                         <h4 class="mb-3">We build it like its our own</h4>
 
-                        <p
-                          >We build every home and sub division as if we were going to live there,
-                          so we do it rght keep it clean and tidy.</p
-                        >
-
-                        <p>Custom work is mucho fun</p>
+                        <p>
+                          Leveraging cutting-edge technologies and methodologies, our teams adhere
+                          to a meticulously planned timeline that ensures optimal progress without
+                          compromising on accuracy.
+                        </p>
 
                         <div class="mt-2 mt-lg-auto">
                           <a href="#" class="custom-link mb-2">
@@ -504,17 +484,17 @@ https://www.tooplate.com/view/2127-little-fashion
             <h5 class="text-white mb-3">Sitemap</h5>
 
             <ul class="footer-menu d-flex flex-wrap">
-              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Story</a></li>
-
-              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
-
               <li class="footer-menu-item"
-                ><a href="#" class="footer-menu-link">Privacy policy</a></li
+                ><a href="about.html" class="footer-menu-link">About</a></li
               >
 
-              <li class="footer-menu-item"><a href="#" class="footer-menu-link">FAQs</a></li>
+              <li class="footer-menu-item"
+                ><a href="products.html" class="footer-menu-link">Previous Projects</a></li
+              >
 
-              <li class="footer-menu-item"><a href="#" class="footer-menu-link">Contact</a></li>
+              <li class="footer-menu-item"
+                ><a href="contact.html" class="footer-menu-link">Contact</a></li
+              >
             </ul>
           </div>
 
