--- a/site-template/home1.html
+++ b/site-template/home1.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Tooplate's Little Fashion - Products</title>
+    <title>Tooplate's Little Fashion - Product Detail</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -93,38 +93,103 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="row">
             <div class="col-lg-10 col-12">
               <h1>
-                <span class="d-block text-primary">Our recent projects</span>
+                <span class="d-block text-primary">House 1</span>
+                <span class="d-block text-dark">Hyrum, Utah</span>
               </h1>
             </div>
           </div>
         </div>
       </header>
 
-      <section class="products section-padding">
+      <section class="product-detail section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-12">
+              <div class="product-thumb">
+                <img
+                  src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  class="img-fluid product-image"
+                  alt=""
+                />
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-12">
+              <div class="product-info d-flex">
+                <div>
+                  <h2 class="product-title mb-0">House 1</h2>
+                </div>
+              </div>
+
+              <div class="product-description">
+                <p class="lead mb-5"
+                  >This house Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
+                  voluptatem alias architecto aliquid nesciunt. Mollitia, modi praesentium? Hic modi
+                  numquam sunt, nesciunt fugiat molestiae assumenda ab esse qui. Cum, molestiae!</p
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="product-thumb">
+            <img
+              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
+              class="img-fluid product-image"
+              alt=""
+            />
+          </div>
+
+          <div class="product-thumb">
+            <img
+              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
+              class="img-fluid product-image"
+              alt=""
+            />
+          </div>
+
+          <div class="product-thumb">
+            <img
+              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
+              class="img-fluid product-image"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- <section class="related-product section-padding border-top">
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h2 class="mb-5">Homes</h2>
+              <h3 class="mb-5">You might also like</h3>
             </div>
 
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
-                <a href="home1.html">
+                <a href="product-detail.html">
                   <img
-                    src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
                     class="img-fluid product-image"
                     alt=""
                   />
                 </a>
 
+                <div class="product-top d-flex">
+                  <span class="product-alert me-auto">New arrival</span>
+
+                  <a href="#" class="bi-heart-fill product-icon"></a>
+                </div>
+
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link">House 1</a>
+                      <a href="product-detail.html" class="product-title-link">Tree pot</a>
                     </h5>
 
-                    <p class="product-p">This is a sick description or something.</p>
+                    <p class="product-p">Original package design from house</p>
                   </div>
+
+                  <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
                 </div>
               </div>
             </div>
@@ -133,48 +198,62 @@ https://www.tooplate.com/view/2127-little-fashion
               <div class="product-thumb">
                 <a href="product-detail.html">
                   <img
-                    src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    src="images/product/jordan-nix-CkCUvwMXAac-unsplash.jpeg"
                     class="img-fluid product-image"
                     alt=""
                   />
                 </a>
 
+                <div class="product-top d-flex">
+                  <span class="product-alert">Low Price</span>
+
+                  <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                </div>
+
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link">House 2</a>
+                      <a href="product-detail.html" class="product-title-link">Fashion set</a>
                     </h5>
 
-                    <p class="product-p">This is a sick description or something.</p>
+                    <p class="product-p">Costume package</p>
                   </div>
+
+                  <small class="product-price text-muted ms-auto mt-auto mb-5">$35</small>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-12 mb-3">
+            <div class="col-lg-4 col-12">
               <div class="product-thumb">
                 <a href="product-detail.html">
                   <img
-                    src="https://images.pexels.com/photos/164558/pexels-photo-164558.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    src="images/product/nature-zen-3Dn1BZZv3m8-unsplash.jpeg"
                     class="img-fluid product-image"
                     alt=""
                   />
                 </a>
 
+                <div class="product-top d-flex">
+                  <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                </div>
+
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link">House 3</a>
+                      <a href="product-detail.html" class="product-title-link">Juice Drinks</a>
                     </h5>
 
-                    <p class="product-p">This is a sick description or something.</p>
+                    <p class="product-p">Nature made another world</p>
                   </div>
+
+                  <small class="product-price text-muted ms-auto mt-auto mb-5">$45</small>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <footer class="site-footer">
@@ -222,6 +301,64 @@ https://www.tooplate.com/view/2127-little-fashion
         </div>
       </div>
     </footer>
+
+    <!-- CART MODAL -->
+    <div
+      class="modal fade"
+      id="cart-modal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content border-0">
+          <div class="modal-header flex-column">
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-lg-6 col-12 mt-4 mt-lg-0">
+                <img
+                  src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
+                  class="img-fluid product-image"
+                  alt=""
+                />
+              </div>
+
+              <div class="col-lg-6 col-12 mt-3 mt-lg-0">
+                <h3 class="modal-title" id="exampleModalLabel">Tree pot</h3>
+
+                <p class="product-price text-muted mt-3">$25</p>
+
+                <p class="product-p">Quatity: <span class="ms-1">4</span></p>
+
+                <p class="product-p">Colour: <span class="ms-1">Black</span></p>
+
+                <p class="product-p pb-3">Size: <span class="ms-1">S/S</span></p>
+
+                <div class="border-top mt-4 pt-3">
+                  <p class="product-p"
+                    ><strong>Total: <span class="ms-1">$100</span></strong></p
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal-footer">
+            <div class="row w-50">
+              <button type="button" class="btn custom-btn cart-btn ms-lg-4">Checkout</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- JAVASCRIPT FILES -->
     <script src="js/jquery.min.js"></script>
