conform houses/homes

--- a/site-template/home2.html
+++ b/site-template/home2.html
@@ -93,8 +93,8 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="row">
             <div class="col-lg-10 col-12">
               <h1>
-                <span class="d-block text-primary">Hill Home</span>
-                <span class="d-block text-dark">Hyrum, Utah</span>
+                <span class="d-block text-primary">Smiths House</span>
+                <span class="d-block text-dark">Smithfield, Utah</span>
               </h1>
             </div>
           </div>
@@ -107,7 +107,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
                 <img
-                  src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg?auto=compress&cs=tinysrgb&w=600"
                   class="img-fluid product-image"
                   alt=""
                 />
@@ -117,7 +117,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-info d-flex">
                 <div>
-                  <h2 class="product-title mb-0">Hill Home</h2>
+                  <h2 class="product-title mb-0">Smiths House</h2>
                 </div>
               </div>
 
