--- a/site-template/products.html
+++ b/site-template/products.html
@@ -120,7 +120,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link">House 1</a>
+                      <a href="home1.html" class="product-title-link">House 1</a>
                     </h5>
 
                     <p class="product-p">This is a sick description or something.</p>
@@ -131,7 +131,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
-                <a href="product-detail.html">
+                <a href="home2.html">
                   <img
                     src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg?auto=compress&cs=tinysrgb&w=600"
                     class="img-fluid product-image"
@@ -142,7 +142,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link">House 2</a>
+                      <a href="home2.html" class="product-title-link">House 2</a>
                     </h5>
 
                     <p class="product-p">This is a sick description or something.</p>
@@ -153,7 +153,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
-                <a href="product-detail.html">
+                <a href="home3.html">
                   <img
                     src="https://images.pexels.com/photos/164558/pexels-photo-164558.jpeg?auto=compress&cs=tinysrgb&w=600"
                     class="img-fluid product-image"
@@ -164,7 +164,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link">House 3</a>
+                      <a href="home3.html" class="product-title-link">House 3</a>
                     </h5>
 
                     <p class="product-p">This is a sick description or something.</p>
