--- a/site-template/about.html
+++ b/site-template/about.html
@@ -129,8 +129,8 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="row">
             <div class="col-lg-9 mx-auto col-11">
               <h2 class="text-center"
-                >Quotes or, <br />
-                <span>No</span> quotes...</h2
+                >Hear from our<br />
+                <span>Friends</span>....</h2
               >
 
               <div class="slick-testimonial">
@@ -153,8 +153,10 @@ https://www.tooplate.com/view/2127-little-fashion
 
                 <div class="slick-testimonial-caption">
                   <p class="lead"
-                    >Over three years in business, We’ve had the chance to work on a variety of
-                    projects, with companies Lorem ipsum dolor sit amet</p
+                    >Hats off to BGR for transforming our land into a masterpiece! Their team not
+                    only executed the earthwork with precision but also took the time to understand
+                    our vision. The commitment to sustainable practices and environmental
+                    responsibility was evident throughout the process.</p
                   >
 
                   <div class="slick-testimonial-client d-flex align-items-center mt-4">
@@ -164,14 +166,16 @@ https://www.tooplate.com/view/2127-little-fashion
                       alt=""
                     />
 
-                    <span>Sandar, <strong class="text-muted">Zoom Fashion Idea</strong></span>
+                    <span>Steve, <strong class="text-muted">Iron Gate Homes</strong></span>
                   </div>
                 </div>
 
                 <div class="slick-testimonial-caption">
                   <p class="lead"
-                    >Over three years in business, We’ve had the chance to work on a variety of
-                    projects, with companies Lorem ipsum dolor sit amet</p
+                    >Working with BGR was a game-changer. Their expertise in earthmoving and site
+                    preparation not only saved us time but also exceeded our expectations in
+                    precision and efficiency. The attention to detail and commitment to
+                    environmental sustainability set them apart.</p
                   >
 
                   <div class="slick-testimonial-client d-flex align-items-center mt-4">
@@ -181,14 +185,16 @@ https://www.tooplate.com/view/2127-little-fashion
                       alt=""
                     />
 
-                    <span>Marie, <strong class="text-muted">Art Fashion Design</strong></span>
+                    <span>Greg, <strong class="text-muted">Sick custom homes</strong></span>
                   </div>
                 </div>
 
                 <div class="slick-testimonial-caption">
                   <p class="lead"
-                    >Over three years in business, We’ve had the chance to work on a variety of
-                    projects, with companies Lorem ipsum dolor sit amet</p
+                    >As a property developer, I've collaborated with various earthwork companies,
+                    but ABC Earth Solutions stands out. Their dedication to safety, innovative
+                    approach to challenging terrains, and ability to meet tight deadlines make them
+                    our go-to partner.</p
                   >
 
                   <div class="slick-testimonial-client d-flex align-items-center mt-4">
@@ -198,7 +204,7 @@ https://www.tooplate.com/view/2127-little-fashion
                       alt=""
                     />
 
-                    <span>Catherine, <strong class="text-muted">Dress Fashion</strong></span>
+                    <span>Alex, <strong class="text-muted">Nixon & Nixon</strong></span>
                   </div>
                 </div>
               </div>
