--- a/site-template/index.html
+++ b/site-template/index.html
@@ -83,7 +83,7 @@
 
       <section class="slick-slideshow">
         <div class="slick-custom">
-          <img src="images/sunset-dozer-img.jpeg" class="img-fluid" alt="" />
+          <img src="images/dozer-pushing.jpeg" class="img-fluid" alt="" />
 
           <div class="slick-bottom">
             <div class="container">
@@ -124,7 +124,7 @@
         </div>
 
         <div class="slick-custom">
-          <img src="images/ex-stepped-footings.JPG" class="img-fluid" alt="" />
+          <img src="images/sunset-dozer-img.jpeg" class="img-fluid" alt="" />
 
           <div class="slick-bottom">
             <div class="container">
@@ -217,15 +217,14 @@
 
                     <div class="col-lg-5 col-12">
                       <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
-                        <h4 class="mb-3"
-                          >Built with <span>love</span> <br />& <span>precision</span> every
-                          time.</h4
-                        >
+                        <h4 class="mb-3">
+                          Built with <span>love</span> <br />& <span>precision</span> every time.
+                        </h4>
                         <p>
                           With expertise in subdivision development, excavation, and underground
                           utilities, we pride ourselves on delivering integrated solutions that
-                          shape the foundation of sustainable and well-planned neighborhoods.</p
-                        >
+                          shape the foundation of sustainable and well-planned neighborhoods.
+                        </p>
                         <div class="mt-2 mt-lg-auto">
                           <a href="about.html" class="custom-link mb-2">
                             Learn more about us
@@ -245,7 +244,7 @@
                 >
                   <div class="row">
                     <div class="col-lg-7 col-12">
-                      <img src="images/snow-blacksmith-v2.jpeg" class="img-fluid" alt="" />
+                      <img src="images/juniper-lot-7.jpeg" class="img-fluid" alt="" />
                     </div>
 
                     <div class="col-lg-5 col-12">
@@ -277,15 +276,12 @@
                 >
                   <div class="row">
                     <div class="col-lg-7 col-12">
-                      <img src="images/ex-blacksmith.jpeg" class="img-fluid" alt="" />
+                      <img src="images/action-sewer-ex.jpeg" class="img-fluid" alt="" />
                     </div>
 
                     <div class="col-lg-5 col-12">
                       <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
                         <h4 class="mb-3">We Specialize in </h4>
-
-                        <p>If it can be done, we can do it</p>
-
                         <div class="skill-thumb mt-3">
                           <strong>Sub-divisions</strong>
                           <div class="progress">
