--- a/site-template/contact.html
+++ b/site-template/contact.html
@@ -186,7 +186,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 </div>
 
                 <div class="col-6 contact-info">
-                  <h6 class="mb-3">other info</h6>
+                  <h6 class="mb-3">Phone</h6>
 
                   <a href="mailto:studio@company.com" class="custom-link">
                     123-345-6789
