--- a/site-template/about.html
+++ b/site-template/about.html
@@ -101,11 +101,7 @@ https://www.tooplate.com/view/2127-little-fashion
           </div>
         </div>
 
-        <img
-          src="https://images.pexels.com/photos/3680959/pexels-photo-3680959.jpeg?auto=compress&cs=tinysrgb&w=600"
-          class="header-image img-fluid"
-          alt=""
-        />
+        <img src="images/people/bgr-fam.png" class="header-image img-fluid family" alt="" />
       </header>
 
       <section class="section-padding">
