--- a/site-template/contact.html
+++ b/site-template/contact.html
@@ -101,11 +101,7 @@ https://www.tooplate.com/view/2127-little-fashion
           </div>
         </div>
 
-        <img
-          src="https://images.pexels.com/photos/323772/pexels-photo-323772.jpeg?auto=compress&cs=tinysrgb&w=600"
-          class="header-image img-fluid"
-          alt=""
-        />
+        <img src="images/Alley/table.jpg" class="header-image img-fluid" alt="" />
       </header>
 
       <section class="contact section-padding">
