--- a/site-template/home1.html
+++ b/site-template/home1.html
@@ -93,8 +93,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="row">
             <div class="col-lg-10 col-12">
               <h1>
-                <span class="d-block text-primary">Hill Home</span>
-                <span class="d-block text-dark">Hyrum, Utah</span>
+                <span class="d-block text-dark">Custom Home</span>
               </h1>
             </div>
           </div>
@@ -106,18 +105,14 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="row">
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
-                <img
-                  src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=600"
-                  class="img-fluid product-image"
-                  alt=""
-                />
+                <img src="images/Alley/front.jpg" class="img-fluid product-image" alt="" />
               </div>
             </div>
 
             <div class="col-lg-6 col-12">
               <div class="product-info d-flex">
                 <div>
-                  <h2 class="product-title mb-0">Hill Home</h2>
+                  <h2 class="product-title mb-0">Hyrum, Utah</h2>
                 </div>
               </div>
 
@@ -132,27 +127,19 @@ https://www.tooplate.com/view/2127-little-fashion
           </div>
 
           <div class="product-thumb">
-            <img
-              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
-              class="img-fluid product-image"
-              alt=""
-            />
+            <img src="images/Alley/fireplace.jpg" class="img-fluid product-image" alt="" />
           </div>
 
           <div class="product-thumb">
-            <img
-              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
-              class="img-fluid product-image"
-              alt=""
-            />
+            <img src="images/Alley/front-room.jpg" class="img-fluid product-image" alt="" />
           </div>
 
           <div class="product-thumb">
-            <img
-              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
-              class="img-fluid product-image"
-              alt=""
-            />
+            <img src="images/Alley/kitchen.jpg" class="img-fluid product-image" alt="" />
+          </div>
+
+          <div class="product-thumb">
+            <img src="images/Alley/vanity.jpg" class="img-fluid product-image" alt="" />
           </div>
         </div>
       </section>
