--- a/site-template/index.html
+++ b/site-template/index.html
@@ -103,7 +103,7 @@
         </div>
 
         <div class="slick-custom">
-          <img src="images/side-ex-blacksmtihimg.jpeg" class="img-fluid" alt="" />
+          <img src="images/juniper-lot-7.jpeg" class="img-fluid" alt="" />
 
           <div class="slick-bottom">
             <div class="container">
@@ -124,7 +124,7 @@
         </div>
 
         <div class="slick-custom">
-          <img src="images/sunset-dozer-img.jpeg" class="img-fluid" alt="" />
+          <img src="images/backfill-sub-sewer.jpeg" class="img-fluid" alt="" />
 
           <div class="slick-bottom">
             <div class="container">
@@ -244,7 +244,7 @@
                 >
                   <div class="row">
                     <div class="col-lg-7 col-12">
-                      <img src="images/juniper-lot-7.jpeg" class="img-fluid" alt="" />
+                      <img src="images/side-ex-blacksmtihimg.jpeg" class="img-fluid" alt="" />
                     </div>
 
                     <div class="col-lg-5 col-12">
@@ -376,20 +376,16 @@
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
                 <a href="home1.html">
-                  <img
-                    src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
+                  <img src="images/Alley/front.jpg" class="img-fluid product-image" alt="" />
                 </a>
 
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home1.html" class="product-title-link">Hill Home</a>
+                      <a href="home1.html" class="product-title-link">Hyde Park</a>
                     </h5>
 
-                    <p class="product-p">These guys were bad clients</p>
+                    <!-- <p class="product-p">These guys were bad clients</p> -->
                   </div>
                 </div>
               </div>
@@ -398,20 +394,16 @@
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
                 <a href="home2.html">
-                  <img
-                    src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
+                  <img src="images/Alred Home/front.jpg" class="img-fluid product-image" alt="" />
                 </a>
 
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home2.html" class="product-title-link">Smiths Home</a>
+                      <a href="home2.html" class="product-title-link">Hyrum</a>
                     </h5>
 
-                    <p class="product-p">Come Buy this thing! its sick!</p>
+                    <!-- <p class="product-p">Come Buy this thing! its sick!</p> -->
                   </div>
                 </div>
               </div>
@@ -420,20 +412,16 @@
             <div class="col-lg-4 col-12">
               <div class="product-thumb">
                 <a href="home3.html">
-                  <img
-                    src="https://images.pexels.com/photos/164558/pexels-photo-164558.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
+                  <img src="images/juniper-lot-7.jpeg" class="img-fluid product-image" alt="" />
                 </a>
 
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home3.html" class="product-title-link">Chris Home</a>
+                      <a href="home3.html" class="product-title-link">Hyde Park</a>
                     </h5>
 
-                    <p class="product-p">Nature made another world</p>
+                    <!-- <p class="product-p">Nature made another world</p> -->
                   </div>
                 </div>
               </div>
