--- a/site-template/products.html
+++ b/site-template/products.html
@@ -110,11 +110,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
                 <a href="home1.html">
-                  <img
-                    src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
+                  <img src="images/Alley/front.jpg" class="img-fluid product-image" alt="" />
                 </a>
 
                 <div class="product-info d-flex">
