--- a/site-template/index.html
+++ b/site-template/index.html
@@ -124,7 +124,7 @@
         </div>
 
         <div class="slick-custom">
-          <img src="images/backfill-sub-sewer.jpeg" class="img-fluid" alt="" />
+          <img src="images/Alley/vannity-view.jpg" class="img-fluid" alt="" />
 
           <div class="slick-bottom">
             <div class="container">
@@ -132,7 +132,7 @@
                 <div class="col-lg-6 col-10">
                   <h1 class="slick-title">General Contractor</h1>
 
-                  <p class="lead text-white mt-lg-3 mb-lg-5">
+                  <p class="lead text-white mt-lg-5 mb-lg-5">
                     Our comprehensive services include project planning, budgeting, subcontractor
                     management, and rigorous adherence to building codes and regulations.</p
                   >
@@ -211,8 +211,15 @@
                   aria-labelledby="pills-home-tab"
                 >
                   <div class="row">
-                    <div class="col-lg-7 col-12">
-                      <img src="images/ex-stepped-footings.JPG" class="img-fluid" alt="" />
+                    <div
+                      class="col-lg-7 col-12"
+                      style="height: 300px; width: 400px; overflow: hidden"
+                    >
+                      <img
+                        src="images/2023 parade home/main-accent-wall.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
                     </div>
 
                     <div class="col-lg-5 col-12">
@@ -243,8 +250,15 @@
                   aria-labelledby="pills-youtube-tab"
                 >
                   <div class="row">
-                    <div class="col-lg-7 col-12">
-                      <img src="images/side-ex-blacksmtihimg.jpeg" class="img-fluid" alt="" />
+                    <div
+                      class="col-lg-7 col-12"
+                      style="height: 300px; width: 400px; overflow: hidden"
+                    >
+                      <img
+                        src="images/2023 parade home/master-shower.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
                     </div>
 
                     <div class="col-lg-5 col-12">
@@ -275,8 +289,8 @@
                   aria-labelledby="pills-skill-tab"
                 >
                   <div class="row">
-                    <div class="col-lg-7 col-12">
-                      <img src="images/action-sewer-ex.jpeg" class="img-fluid" alt="" />
+                    <div class="col-lg-7 col-12" style="height: 300px; width: 400px">
+                      <img src="images/Alred Home/entry.jpg" class="img-fluid" alt="" />
                     </div>
 
                     <div class="col-lg-5 col-12">
@@ -412,7 +426,11 @@
             <div class="col-lg-4 col-12">
               <div class="product-thumb">
                 <a href="home3.html">
-                  <img src="images/juniper-lot-7.jpeg" class="img-fluid product-image" alt="" />
+                  <img
+                    src="images/2023 parade home/front-view.jpg"
+                    class="img-fluid product-image"
+                    alt=""
+                  />
                 </a>
 
                 <div class="product-info d-flex">
