--- a/site-template/about.html
+++ b/site-template/about.html
@@ -101,7 +101,7 @@ https://www.tooplate.com/view/2127-little-fashion
           </div>
         </div>
 
-        <img src="images/people/bgr-fam.png" class="header-image img-fluid family" alt="" />
+        <img src="images/family.png" class="header-image img-fluid family" alt="" />
       </header>
 
       <section class="section-padding">
