--- a/site-template/products.html
+++ b/site-template/products.html
@@ -116,32 +116,8 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home1.html" class="product-title-link">House 1</a>
+                      <a href="home1.html" class="product-title-link">Hyde Park, UT</a>
                     </h5>
-
-                    <p class="product-p">This is a sick description or something.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-12 mb-3">
-              <div class="product-thumb">
-                <a href="home2.html">
-                  <img
-                    src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg?auto=compress&cs=tinysrgb&w=600"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
-                </a>
-
-                <div class="product-info d-flex">
-                  <div>
-                    <h5 class="product-title mb-0">
-                      <a href="home2.html" class="product-title-link">House 2</a>
-                    </h5>
-
-                    <p class="product-p">This is a sick description or something.</p>
                   </div>
                 </div>
               </div>
@@ -151,7 +127,7 @@ https://www.tooplate.com/view/2127-little-fashion
               <div class="product-thumb">
                 <a href="home3.html">
                   <img
-                    src="https://images.pexels.com/photos/164558/pexels-photo-164558.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    src="images/2023 parade home/front-view.jpg"
                     class="img-fluid product-image"
                     alt=""
                   />
@@ -160,10 +136,68 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home3.html" class="product-title-link">House 3</a>
+                      <a href="home3.html" class="product-title-link">Hyde Park, UT</a>
                     </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
 
-                    <p class="product-p">This is a sick description or something.</p>
+            <div class="col-lg-4 col-12 mb-3">
+              <div class="product-thumb">
+                <a href="home2.html">
+                  <img
+                    src="images/Alred Home/font-view.jpg"
+                    class="img-fluid product-image"
+                    alt=""
+                  />
+                </a>
+
+                <div class="product-info d-flex">
+                  <div>
+                    <h5 class="product-title mb-0">
+                      <a href="home2.html" class="product-title-link">Hyrum, UT</a>
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-12 mb-3">
+              <div class="product-thumb">
+                <a href="home3.html">
+                  <img
+                    src="images/Mumford Home/front-view.jpg"
+                    class="img-fluid product-image"
+                    alt=""
+                  />
+                </a>
+
+                <div class="product-info d-flex">
+                  <div>
+                    <h5 class="product-title mb-0">
+                      <a href="home3.html" class="product-title-link">North Logan, UT</a>
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-12 mb-3">
+              <div class="product-thumb">
+                <a href="home3.html">
+                  <img
+                    src="images/Scadden Home/front-home-view.jpg"
+                    class="img-fluid product-image"
+                    alt=""
+                  />
+                </a>
+
+                <div class="product-info d-flex">
+                  <div>
+                    <h5 class="product-title mb-0">
+                      <a href="home3.html" class="product-title-link">Hyde Park, UT</a>
+                    </h5>
                   </div>
                 </div>
               </div>
