--- a/site-template/index.html
+++ b/site-template/index.html
@@ -103,7 +103,7 @@
         </div>
 
         <div class="slick-custom">
-          <img src="images/juniper-lot-7.jpeg" class="img-fluid" alt="" />
+          <img src="images/2023 parade home/front-view.jpg" class="img-fluid" alt="" />
 
           <div class="slick-bottom">
             <div class="container">
