--- a/site-template/about.html
+++ b/site-template/about.html
@@ -92,8 +92,9 @@ https://www.tooplate.com/view/2127-little-fashion
       <header class="site-header section-padding-img site-header-image">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 col-12 header-info">
+            <div class="col-lg-6 col-12 header-info about-header-text">
               <h1>
+                <span class="d-block text-dark">Get to know</span>
                 <span class="d-block text-primary">BGR</span>
                 <span class="d-block text-dark">Construction</span>
               </h1>
