--- a/site-template/index.html
+++ b/site-template/index.html
@@ -83,7 +83,7 @@
 
       <section class="slick-slideshow">
         <div class="slick-custom">
-          <img src="images/dozer-pushing.jpeg" class="img-fluid" alt="" />
+          <img src="images/dozer-pushing-resized.jpg" class="img-fluid" alt="" />
 
           <div class="slick-bottom">
             <div class="container">
