--- a/home3.html
+++ b/home3.html
@@ -93,8 +93,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="row">
             <div class="col-lg-10 col-12">
               <h1>
-                <span class="d-block text-primary">Chris House</span>
-                <span class="d-block text-dark">Logan, Utah</span>
+                <span class="d-block text-dark">Hyrum, Utah</span>
               </h1>
             </div>
           </div>
@@ -107,7 +106,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
                 <img
-                  src="https://images.pexels.com/photos/164558/pexels-photo-164558.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  src="./images/Alred Home/font-view.jpg"
                   class="img-fluid product-image"
                   alt=""
                 />
@@ -117,7 +116,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-info d-flex">
                 <div>
-                  <h2 class="product-title mb-0">House 1</h2>
+                  <h2 class="product-title mb-0">Custom Home</h2>
                 </div>
               </div>
 
@@ -131,28 +130,22 @@ https://www.tooplate.com/view/2127-little-fashion
             </div>
           </div>
 
-          <div class="product-thumb">
-            <img
-              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
-              class="img-fluid product-image"
-              alt=""
-            />
-          </div>
+          <div class="home-image-grid">
+            <div class="product-thumb thumbnail-wrapper">
+              <img
+                src="./images/Alred Home/office-piano.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
+            </div>
 
-          <div class="product-thumb">
-            <img
-              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
-              class="img-fluid product-image"
-              alt=""
-            />
-          </div>
+            <div class="product-thumb thumbnail-wrapper">
+              <img src="./images/Alred Home/entry.jpg" class="img-fluid product-image" alt="" />
+            </div>
 
-          <div class="product-thumb">
-            <img
-              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
-              class="img-fluid product-image"
-              alt=""
-            />
+            <div class="product-thumb thumbnail-wrapper">
+              <img src="./images/Alred Home/Hyrum-3.jpg" class="img-fluid product-image" alt="" />
+            </div>
           </div>
         </div>
       </section>
