--- a/home5.html
+++ b/home5.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Tooplate's Little Fashion - Product Detail</title>
+    <title>BGR Construction</title>
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -93,7 +93,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="row">
             <div class="col-lg-10 col-12">
               <h1>
-                <span class="d-block text-dark">Custom Home</span>
+                <span class="d-block text-dark">Hyde Park, Utah</span>
               </h1>
             </div>
           </div>
@@ -105,14 +105,18 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="row">
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
-                <img src="images/Alley/front.jpg" class="img-fluid product-image" alt="" />
+                <img
+                  src="./images/Scadden Home/front-home-view.jpg"
+                  class="img-fluid product-image"
+                  alt=""
+                />
               </div>
             </div>
 
             <div class="col-lg-6 col-12">
               <div class="product-info d-flex">
                 <div>
-                  <h2 class="product-title mb-0">Hyrum, Utah</h2>
+                  <h2 class="product-title mb-0">Custom Home</h2>
                 </div>
               </div>
 
@@ -128,19 +132,35 @@ https://www.tooplate.com/view/2127-little-fashion
 
           <div class="home-image-grid">
             <div class="product-thumb thumbnail-wrapper">
-              <img src="images/Alley/fireplace.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="./images/Scadden Home/island-view.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
-              <img src="images/Alley/front-room.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="./images/Scadden Home/master-bedroom.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
-              <img src="images/Alley/kitchen.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="./images/Scadden Home/kitchen-wide-view.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
-              <img src="images/Alley/vanity.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="./images/Scadden Home/cabinets.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
           </div>
         </div>
