--- a/site-template/home2.html
+++ b/site-template/home2.html
@@ -93,8 +93,7 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="row">
             <div class="col-lg-10 col-12">
               <h1>
-                <span class="d-block text-primary">Smiths House</span>
-                <span class="d-block text-dark">Smithfield, Utah</span>
+                <span class="d-block text-dark">Hyde Park, Utah</span>
               </h1>
             </div>
           </div>
@@ -107,7 +106,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
                 <img
-                  src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg?auto=compress&cs=tinysrgb&w=600"
+                  src="./images/2023 parade home/front-view.jpg"
                   class="img-fluid product-image"
                   alt=""
                 />
@@ -117,42 +116,36 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-info d-flex">
                 <div>
-                  <h2 class="product-title mb-0">Smiths House</h2>
+                  <h2 class="product-title mb-0">Hyde Park, Utah</h2>
                 </div>
-              </div>
-
-              <div class="product-description">
-                <p class="lead mb-5"
-                  >This house Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga
-                  voluptatem alias architecto aliquid nesciunt. Mollitia, modi praesentium? Hic modi
-                  numquam sunt, nesciunt fugiat molestiae assumenda ab esse qui. Cum, molestiae!</p
-                >
               </div>
             </div>
           </div>
 
-          <div class="product-thumb">
-            <img
-              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
-              class="img-fluid product-image"
-              alt=""
-            />
-          </div>
+          <div class="home-image-grid">
+            <div class="product-thumb thumbnail-wrapper">
+              <img
+                src="./images/2023 parade home/fireplace-living-room.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
+            </div>
 
-          <div class="product-thumb">
-            <img
-              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
-              class="img-fluid product-image"
-              alt=""
-            />
-          </div>
+            <div class="product-thumb thumbnail-wrapper">
+              <img
+                src="./images/2023 parade home/kitchen-main-living-room.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
+            </div>
 
-          <div class="product-thumb">
-            <img
-              src="https://images.pexels.com/photos/276724/pexels-photo-276724.jpeg?auto=compress&cs=tinysrgb&w=600"
-              class="img-fluid product-image"
-              alt=""
-            />
+            <div class="product-thumb thumbnail-wrapper">
+              <img
+                src="./images/2023 parade home/master-bathroom.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </section>
