--- a/site-template/index.html
+++ b/site-template/index.html
@@ -89,7 +89,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-lg-6 col-10">
-                  <h1 class="slick-title">Land Development</h1>
+                  <h1 class="slick-title">Development</h1>
 
                   <p class="lead text-white mt-lg-3 mb-lg-5">
                     Our dedicated team combines decades of experience with state-of-the-art
