--- a/site-template/home3.html
+++ b/site-template/home3.html
@@ -144,7 +144,11 @@ https://www.tooplate.com/view/2127-little-fashion
             </div>
 
             <div class="product-thumb thumbnail-wrapper">
-              <img src="./images/Alred Home/Hyrum-3.jpg" class="img-fluid product-image" alt="" />
+              <img
+                src="./images/Alred Home/bookshelf-view.jpg"
+                class="img-fluid product-image"
+                alt=""
+              />
             </div>
           </div>
         </div>
