--- a/site-template/index.html
+++ b/site-template/index.html
@@ -389,14 +389,18 @@
 
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
-                <a href="home1.html">
-                  <img src="images/Alley/front.jpg" class="img-fluid product-image" alt="" />
+                <a href="home4.html">
+                  <img
+                    src="images/Mumford Home/front-view.jpg"
+                    class="img-fluid product-image"
+                    alt=""
+                  />
                 </a>
 
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home1.html" class="product-title-link">Hyde Park</a>
+                      <a href="home4.html" class="product-title-link">Hyde Park</a>
                     </h5>
 
                     <!-- <p class="product-p">These guys were bad clients</p> -->
@@ -407,14 +411,14 @@
 
             <div class="col-lg-4 col-12 mb-3">
               <div class="product-thumb">
-                <a href="home2.html">
+                <a href="home3.html">
                   <img src="images/Alred Home/front.jpg" class="img-fluid product-image" alt="" />
                 </a>
 
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home2.html" class="product-title-link">Hyrum</a>
+                      <a href="home3.html" class="product-title-link">Hyrum</a>
                     </h5>
 
                     <!-- <p class="product-p">Come Buy this thing! its sick!</p> -->
@@ -425,7 +429,7 @@
 
             <div class="col-lg-4 col-12">
               <div class="product-thumb">
-                <a href="home3.html">
+                <a href="home2.html">
                   <img
                     src="images/2023 parade home/front-view.jpg"
                     class="img-fluid product-image"
@@ -436,7 +440,7 @@
                 <div class="product-info d-flex">
                   <div>
                     <h5 class="product-title mb-0">
-                      <a href="home3.html" class="product-title-link">Hyde Park</a>
+                      <a href="home2.html" class="product-title-link">Hyde Park</a>
                     </h5>
 
                     <!-- <p class="product-p">Nature made another world</p> -->
